# tg_landing

./: Dockerfile  Dockerfile.bot  Dockerfile.web  README.md  docker-compose.yaml  env.example  nginx.conf  pyproject.toml
html/: 1.html
src/: bot.py  config.py  main.py  new_main.py
src/static/: script.js  style-store.css  style.css
src/templates/: base.html  error_email.html  index.html  submit.html
