[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Sergey Rusanov <sergeikulyb@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.17.0"
pydantic-settings = "^2.7.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
jinja2 = "^3.1.5"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
